# armadillo-exercise

./: CMakeLists.txt  README.md  requirements.sys
armadillo/: CMakeLists.txt
armadillo/src/: demo-01.cpp  demo-03.cpp
docker/: Dockerfile  build.sh  devel.sh  dockerfile  mount_and_run.sh  run.sh
eigen/: CMakeLists.txt
eigen/src/: demo-autodiff-jacobian.cpp  demo-autodiff.cpp
src/: demo-02.cpp
